--- a/web/index.html
+++ b/web/index.html
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
     <base href="$FLUTTER_BASE_HREF" />
-
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
-    <meta name="description" content="A new Flutter project." />
-
-    <!-- iOS meta tags & icons -->
+    <meta name="description" content="Net Medya Grup Website" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="Net Medya Grup Website" />
-    <link rel="apple-touch-icon" href="logo.png" />
-
-    <!-- Favicon -->
+    <meta name="apple-mobile-web-app-title" content="Net Medya Grup" />
     <link rel="icon" type="image/png" href="logo.png" />
-
     <title>Net Medya Grup Website</title>
     <link rel="manifest" href="manifest.json" />
   </head>
-  <body>
-    <script src="flutter_bootstrap.js" async></script>
+  <body style="margin: 0; padding: 0; overflow: auto">
+    <!-- 1) Flutter bootstrap -->
+    <script src="flutter_bootstrap.js" defer></script>
+    <script src="main.dart.js" defer></script>
+
+    <!-- 2) Google Map embed -->
+    <section
+      id="embedded-map"
+      style="height: 300px; width: 100%; margin: 16px 0"
+    >
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3…"
+        width="100%"
+        height="100%"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+      >
+      </iframe>
+    </section>
+
+    <!-- 3) Kuula 360° tour embed -->
+    <section id="kuula-tour" style="height: 70vh; width: 100%; margin: 16px 0">
+      <iframe
+        src="https://kuula.co/share/collection/71f3D?logo=-1…"
+        width="100%"
+        height="100%"
+        style="border: none"
+        allowfullscreen
+      >
+      </iframe>
+    </section>
   </body>
 </html>
