--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base href="$FLUTTER_BASE_HREF" />
+    <base href="/" />
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
     <meta name="description" content="Net Medya Grup Website" />
@@ -16,7 +16,16 @@
     <!-- 1) Flutter bootstrap -->
     <script src="flutter_bootstrap.js" defer></script>
     <script src="main.dart.js" defer></script>
-
+    <style>
+      html,
+      body {
+        height: auto;
+        margin: 0;
+        padding: 0;
+        overflow: auto;
+        scroll-behavior: smooth;
+      }
+    </style>
     <!-- 2) Google Map embed -->
     <section
       id="embedded-map"
